changed background color

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   width: 100%;
   font-family: "Inter", sans-serif;
   color: var(--main-color);
-  background-color: #f5e8d1;
+  background-color: #ebebf7;
 }
 
 :root {
